I changed the font

--- a/Doc.HTML
+++ b/Doc.HTML
@@ -11,6 +11,7 @@
     <meta name="keywords" content="RDL, braids, hair, beauty, style" />
     <meta name="author" content="RDL BRAIDS" />
     <link rel="stylesheet" href="Styles/Styles.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Edu+NSW+ACT+Cursive:wght@400..700&display=swap" rel="stylesheet">
   </head>
 
   <body>
