--- a/Pages/Aboutus.html
+++ b/Pages/Aboutus.html
@@ -12,6 +12,7 @@
     <meta name="author" content="RDL BRAIDS" />
     <link rel="stylesheet" href="../Styles/Styles.css" />
     <title>RDL BRAIDS - Gallery</title>
+    <link href="https://fonts.googleapis.com/css2?family=Edu+NSW+ACT+Cursive:wght@400..700&display=swap" rel="stylesheet">
     <div class="logo">
       <img
         src="../Images/RDL.jpg"
