--- a/Pages/prices.html
+++ b/Pages/prices.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="../Styles/Styles.css" />
     <link rel="stylesheet" href="../Styles/prices.css" />
     <title>RDL BRAIDS - Prices</title>
+    <link href="https://fonts.googleapis.com/css2?family=Edu+NSW+ACT+Cursive:wght@400..700&display=swap" rel="stylesheet">
     <div class="logo">
       <img
         src="../Images/RDL.jpg"
