--- a/Pages/gallery.html
+++ b/Pages/gallery.html
@@ -13,6 +13,7 @@
     <meta name="author" content="RDL BRAIDS" />
     <link rel="stylesheet" href="../Styles/Styles.css" />
     <link rel="stylesheet" href="../Styles/gallerystyle.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Edu+NSW+ACT+Cursive:wght@400..700&display=swap" rel="stylesheet">
     <title>RDL BRAIDS - Gallery</title>
     <div class="logo">
       <img
