--- a/Pages/services.html
+++ b/Pages/services.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="../Styles/Styles.css" />
     <link rel="stylesheet" href="../Styles/ServiceStyle.css" />
     <title>RDL BRAIDS - Services</title>
+    <link href="https://fonts.googleapis.com/css2?family=Edu+NSW+ACT+Cursive:wght@400..700&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class="logo">
