--- a/Pages/gallery.html
+++ b/Pages/gallery.html
@@ -1,228 +1,110 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <meta
-      name="description"
-      content="At RDL's, where your braids express who you are"
-    />
-    <meta name="gallery" content="RDL, braids, hair, beauty, style" />
-    <meta name="keywords" content="RDL, braids, hair, beauty, style" />
-    <meta name="author" content="RDL BRAIDS" />
-    <link rel="stylesheet" href="../Styles/Styles.css" />
-    <link rel="stylesheet" href="../Styles/gallerystyle.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Edu+NSW+ACT+Cursive:wght@400..700&display=swap" rel="stylesheet">
-    <title>RDL BRAIDS - Gallery</title>
-    <div class="logo">
-      <img
-        src="../Images/RDL.jpg"
-        alt="RDL BRAIDS"
-        width="150"
-        height="150"
-        stretch
-      />
-    </div>
-  </head>
-  <nav id="navbar" role="navigation" aria-label="Main Navigation">
-    <ul>
-      <li><a href="../Doc.html">Home</a></li>
-      <li><a href="services.html">Services</a></li>
-      <li><a href="book.html">Book Now</a></li>
-      <li><a href="prices.html">Prices</a></li>
-      <li><a href="gallery.html">Gallery</a></li>
-      <li><a href="Contactus.html">Contact Us</a></li>
-      <li><a href="aboutus.html">About Us</a></li>
-    </ul>
-  </nav>
-  <body>
-    <h1>Gallery</h1>
-    <p>
-      Welcome to our gallery! Here you can see some of the beautiful braids and
-      styles we have created for our clients.
-    </p>
-    <div class="gallery">
-      <!-- TikTok Video 1 -->
-      <blockquote
-        class="tiktok-embed"
-        cite="https://www.tiktok.com/@rdl.braids/video/7480410016965528837"
-        data-video-id="7480410016965528837"
-        style="max-width: 605px; min-width: 325px"
-      >
-        <section>
-          <a
-            target="_blank"
-            title="@rdl.braids"
-            href="https://www.tiktok.com/@rdl.braids"
-            >@rdl.braids</a
-          >
-        </section>
-      </blockquote>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <meta name="description" content="At RDL's, where your braids express who you are" />
+  <meta name="keywords" content="RDL, braids, hair, beauty, style" />
+  <meta name="author" content="RDL BRAIDS" />
+  <link rel="stylesheet" href="../Styles/Styles.css" />
+  <link rel="stylesheet" href="../Styles/gallerystyle.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Edu+NSW+ACT+Cursive:wght@400..700&display=swap" rel="stylesheet">
+  <title>RDL BRAIDS - Gallery</title>
+</head>
+<body>
+  <div class="page-container">
+    <!-- Header and Navigation -->
+    <header>
+      <div class="logo">
+        <img src="../Images/RDL.jpg" alt="RDL BRAIDS Logo" width="150" height="150" />
+      </div>
+      <nav id="navbar" role="navigation" aria-label="Main Navigation">
+        <ul>
+          <li><a href="../Doc.html">Home</a></li>
+          <li><a href="services.html">Services</a></li>
+          <li><a href="book.html">Book Now</a></li>
+          <li><a href="prices.html">Prices</a></li>
+          <li><a href="gallery.html">Gallery</a></li>
+          <li><a href="Contactus.html">Contact Us</a></li>
+          <li><a href="aboutus.html">About Us</a></li>
+        </ul>
+      </nav>
+    </header>
 
-      <!-- TikTok Video 2 -->
-      <blockquote
-        class="tiktok-embed"
-        cite="https://www.tiktok.com/@rdl.braids/video/7492441779719916805"
-        data-video-id="7492441779719916805"
-        style="max-width: 605px; min-width: 325px"
-      >
-        <section>
-          <a
-            target="_blank"
-            title="@rdl.braids"
-            href="https://www.tiktok.com/@rdl.braids"
-            >@rdl.braids</a
-          >
-        </section>
-      </blockquote>
+    <!-- Main Content -->
+    <main class="content">
+      <h1>Gallery</h1>
+      <p>Welcome to our gallery! Here you can see some of the beautiful braids and styles we have created for our clients.</p>
 
-      <!-- TikTok Video 3 -->
-      <blockquote
-        class="tiktok-embed"
-        cite="https://www.tiktok.com/@rdl.braids/photo/7496940299541859639"
-        data-video-id="7489527654564121862"
-        style="max-width: 605px; min-width: 325px"
-      >
-        <section>
-          <a
-            target="_blank"
-            title="@rdl.braids"
-            href="https://www.tiktok.com/@rdl.braids"
-            >@rdl.braids</a
-          >
-        </section>
-      </blockquote>
+      <div class="gallery">
+        <!-- TikTok Video 1 -->
+        <blockquote class="tiktok-embed" cite="https://www.tiktok.com/@rdl.braids/video/7480410016965528837" data-video-id="7480410016965528837" style="max-width: 605px; min-width: 325px">
+          <section><a target="_blank" title="@rdl.braids" href="https://www.tiktok.com/@rdl.braids">@rdl.braids</a></section>
+        </blockquote>
 
-      <!-- TikTok Video 4 -->
-      <blockquote
-        class="tiktok-embed"
-        cite="https://www.tiktok.com/@rdl.braids/video/7498418682217909510"
-        data-video-id="7498418682217909510"
-        style="max-width: 605px; min-width: 325px"
-      >
-        <section>
-          <a
-            target="_blank"
-            title="@rdl.braids"
-            href="https://www.tiktok.com/@rdl.braids"
-            >@rdl.braids</a
-          >
-        </section>
-      </blockquote>
+        <!-- TikTok Video 2 -->
+        <blockquote class="tiktok-embed" cite="https://www.tiktok.com/@rdl.braids/video/7492441779719916805" data-video-id="7492441779719916805" style="max-width: 605px; min-width: 325px">
+          <section><a target="_blank" title="@rdl.braids" href="https://www.tiktok.com/@rdl.braids">@rdl.braids</a></section>
+        </blockquote>
 
-      <!-- TikTok Video 5 -->
-      <blockquote
-        class="tiktok-embed"
-        cite="https://www.tiktok.com/@rdl.braids/video/7486862882441923895"
-        data-video-id="7486862882441923895"
-        style="max-width: 605px; min-width: 325px"
-      >
-        <section>
-          <a
-            target="_blank"
-            title="@rdl.braids"
-            href="https://www.tiktok.com/@rdl.braids"
-            >@rdl.braids</a
-          >
-        </section>
-      </blockquote>
+        <!-- TikTok Video 3 -->
+        <blockquote class="tiktok-embed" cite="https://www.tiktok.com/@rdl.braids/photo/7496940299541859639" data-video-id="7489527654564121862" style="max-width: 605px; min-width: 325px">
+          <section><a target="_blank" title="@rdl.braids" href="https://www.tiktok.com/@rdl.braids">@rdl.braids</a></section>
+        </blockquote>
 
-      <!-- TikTok Video 6 -->
-      <blockquote
-        class="tiktok-embed"
-        cite="https://www.tiktok.com/@rdl.braids/video/7474690055156649271"
-        data-video-id="7474690055156649271"
-        style="max-width: 605px; min-width: 325px"
-      >
-        <section>
-          <a
-            target="_blank"
-            title="@rdl.braids"
-            href="https://www.tiktok.com/@rdl.braids"
-            >@rdl.braids</a
-          >
-        </section>
-      </blockquote>
+        <!-- TikTok Video 4 -->
+        <blockquote class="tiktok-embed" cite="https://www.tiktok.com/@rdl.braids/video/7498418682217909510" data-video-id="7498418682217909510" style="max-width: 605px; min-width: 325px">
+          <section><a target="_blank" title="@rdl.braids" href="https://www.tiktok.com/@rdl.braids">@rdl.braids</a></section>
+        </blockquote>
 
-      <!-- TikTok Video 7 -->
-      <blockquote
-        class="tiktok-embed"
-        cite="https://www.tiktok.com/@rdl.braids/video/7500325928950680838"
-        data-video-id="7500325928950680838"
-        style="max-width: 605px; min-width: 325px"
-      >
-        <section>
-          <a
-            target="_blank"
-            title="@rdl.braids"
-            href="https://www.tiktok.com/@rdl.braids"
-            >@rdl.braids</a
-          >
-        </section>
-      </blockquote>
+        <!-- TikTok Video 5 -->
+        <blockquote class="tiktok-embed" cite="https://www.tiktok.com/@rdl.braids/video/7486862882441923895" data-video-id="7486862882441923895" style="max-width: 605px; min-width: 325px">
+          <section><a target="_blank" title="@rdl.braids" href="https://www.tiktok.com/@rdl.braids">@rdl.braids</a></section>
+        </blockquote>
 
-      <!-- TikTok Video 8 -->
-      <blockquote
-        class="tiktok-embed"
-        cite="https://www.tiktok.com/@rdl.braids/video/7479832927581244678"
-        data-video-id="7479832927581244678"
-        style="max-width: 605px; min-width: 325px"
-      >
-        <section>
-          <a
-            target="_blank"
-            title="@rdl.braids"
-            href="https://www.tiktok.com/@rdl.braids"
-            >@rdl.braids</a
-          >
-        </section>
-      </blockquote>
+        <!-- TikTok Video 6 -->
+        <blockquote class="tiktok-embed" cite="https://www.tiktok.com/@rdl.braids/video/7474690055156649271" data-video-id="7474690055156649271" style="max-width: 605px; min-width: 325px">
+          <section><a target="_blank" title="@rdl.braids" href="https://www.tiktok.com/@rdl.braids">@rdl.braids</a></section>
+        </blockquote>
 
-      <!-- TikTok Video 9 -->
-      <blockquote
-        class="tiktok-embed"
-        cite="https://www.tiktok.com/@rdl.braids/video/7510382878291676421"
-        data-video-id="7510382878291676421"
-        style="max-width: 605px; min-width: 325px"
-      >
-        <section>
-          <a
-            target="_blank"
-            title="@rdl.braids"
-            href="https://www.tiktok.com/@rdl.braids"
-            >@rdl.braids</a
-          >
-        </section>
-      </blockquote>
-    </div>
+        <!-- TikTok Video 7 -->
+        <blockquote class="tiktok-embed" cite="https://www.tiktok.com/@rdl.braids/video/7500325928950680838" data-video-id="7500325928950680838" style="max-width: 605px; min-width: 325px">
+          <section><a target="_blank" title="@rdl.braids" href="https://www.tiktok.com/@rdl.braids">@rdl.braids</a></section>
+        </blockquote>
 
-    <p>
-      For more information about our services, please visit our
-      <a href="services.html">Services</a> page.
-    </p>
-    <p>
-      If you would like to book an appointment, please go to our
-      <a href="booking.html">Booking</a> page.
-    </p>
-    <p>
-      For pricing details, please check our
-      <a href="prices.html">Prices</a> page.
-    </p>
-    <p>
-      If you have any questions or need assistance, feel free to
-      <a href="contact.html">Contact Us</a>.
-    </p>
+        <!-- TikTok Video 8 -->
+        <blockquote class="tiktok-embed" cite="https://www.tiktok.com/@rdl.braids/video/7479832927581244678" data-video-id="7479832927581244678" style="max-width: 605px; min-width: 325px">
+          <section><a target="_blank" title="@rdl.braids" href="https://www.tiktok.com/@rdl.braids">@rdl.braids</a></section>
+        </blockquote>
+
+        <!-- TikTok Video 9 -->
+        <blockquote class="tiktok-embed" cite="https://www.tiktok.com/@rdl.braids/video/7510382878291676421" data-video-id="7510382878291676421" style="max-width: 605px; min-width: 325px">
+          <section><a target="_blank" title="@rdl.braids" href="https://www.tiktok.com/@rdl.braids">@rdl.braids</a></section>
+        </blockquote>
+      </div>
+
+      <!-- Info Links -->
+      <section class="info-links">
+        <p>For more information about our services, please visit our <a href="services.html">Services</a> page.</p>
+        <p>If you would like to book an appointment, please go to our <a href="book.html">Booking</a> page.</p>
+        <p>For pricing details, please check our <a href="prices.html">Prices</a> page.</p>
+        <p>If you have any questions or need assistance, feel free to <a href="Contactus.html">Contact Us</a>.</p>
+      </section>
+    </main>
+
+    <!-- Footer -->
     <footer>
       <p>&copy; 2025 RDL BRAIDS. All rights reserved.</p>
-      <p><a href="privacy.html">Privacy Policy</a></p>
-      <p><a href="terms.html">Terms of Service</a></p>
+      <p><a href="privacy.html">Privacy Policy</a> | <a href="terms.html">Terms of Service</a></p>
       <p>Follow us on social media:</p>
       <ul>
         <li><a href="https://www.tiktok.com/@rdl.braids">TikTok</a></li>
       </ul>
     </footer>
-    <script async src="https://www.tiktok.com/embed.js"></script>
-  </body>
+  </div>
+
+  <!-- TikTok Embed Script -->
+  <script async src="https://www.tiktok.com/embed.js"></script>
+</body>
 </html>
-<!-- End of gallery page -->
