Change the font , add the script

--- a/Doc.HTML
+++ b/Doc.HTML
@@ -132,6 +132,8 @@
       <ul>
         <li><a href="https://www.tiktok.com/@rdl.braids">TikTok</a></li>
       </ul>
+      <button id="toggle-theme">Toggle Theme</button>
     </footer>
+    <script src="../Scripts/Toggle.js"></script>
   </body>
 </html>
