--- a/Pages/book.html
+++ b/Pages/book.html
@@ -93,7 +93,9 @@
         <li><a href="https://www.tiktok.com/@rdl.braids">TikTok</a></li>
       </ul>
     </footer>
+    <button id="toggle-theme">Toggle Theme</button>
   </body>
+   <script src="../Scripts/Toggle.js"></script>
 </html>
 <!-- End of file: Pages/book.html -->
 <!-- This file is part of the RDL BRAIDS Web Project. -->
