--- a/Pages/gallery.html
+++ b/Pages/gallery.html
@@ -102,8 +102,8 @@
         <li><a href="https://www.tiktok.com/@rdl.braids">TikTok</a></li>
       </ul>
     </footer>
+    <button id="toggle-theme">Toggle Theme</button>
   </div>
-
   <!-- TikTok Embed Script -->
   <script async src="https://www.tiktok.com/embed.js"></script>
 </body>
