--- a/Pages/prices.html
+++ b/Pages/prices.html
@@ -86,6 +86,7 @@
         <li><a href="https://www.tiktok.com/@rdl.braids">TikTok</a></li>
       </ul>
     </footer>
+    <button id="toggle-theme">Toggle Theme</button>
   </body>
 </html>
 <!-- End of file: Pages/prices.html -->
