--- a/Pages/services.html
+++ b/Pages/services.html
@@ -92,5 +92,7 @@
         <li><a href="https://www.tiktok.com/@rdl.braids">TikTok</a></li>
       </ul>
     </footer>
+    <button id="toggle-theme">Toggle Theme</button>
   </body>
+   <script src="../Scripts/Toggle.js"></script>
 </html>
