I have made the following changes to the project: I have added a french version of the whole content

--- a/Doc-fr.html
+++ b/Doc-fr.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <meta name="description" content="At RDL Touch, where allure meets artistry." />
-  <meta name="keywords" content="RDL, braids, hair, beauty, style" />
+  <meta name="description" content="Chez RDL Touch, l’allure rencontre l’art" />
+  <meta name="keywords" content="RDL, tresses, coiffure, beauté, style" />
   <meta name="author" content="RDLTouch" />
   <link rel="stylesheet" href="Styles/Styles.css" />
   <link href="https://fonts.googleapis.com/css2?family=Edu+NSW+ACT+Cursive:wght@400..700&display=swap" rel="stylesheet">
@@ -18,46 +18,44 @@
 
 <body>
   <header>
-    <h1>RDL BRAIDS Touch</h1>
+    <h1>RDL  Touch</h1>
     <div class="logo">
-      <img src="Images/RDL Touch.jpeg" alt="RDL BRAIDS logo" width="150" height="150" />
+      <img src="Images/RDL Touch.jpeg" alt="Logo RDL Touch" width="150" height="150" />
     </div>
-    <nav id="navbar" role="navigation" aria-label="Main Navigation">
+    <nav id="navbar" role="navigation" aria-label="Navigation principale">
       <ul>
-        <li><a href="Doc.html">Home</a></li>
-        <li><a href="/Pages/Aboutus.html">Services</a></li>
-        <li><a href="/Pages/book.html">Book Now</a></li>
-        <li><a href="/Pages/prices.html">Prices</a></li>
-        <li><a href="/Pages/gallery.html">Gallery</a></li>
-        <li><a href="/Pages/contactus.html">Contact Us</a></li>
-        <li><a href="/Pages/aboutus.html">About Us</a></li>
-        
-
+        <li><a href="Doc-fr.html">Accueil</a></li>
+        <li><a href="/Pages/services-fr.html">Services</a></li>
+        <li><a href="/Pages/book-fr.html">Réserver</a></li>
+        <li><a href="/Pages/prices-fr.html">Tarifs</a></li>
+        <li><a href="/Pages/gallery-fr.html">Galerie</a></li>
+        <li><a href="/Pages/contactus-fr.html">Contact</a></li>
+        <li><a href="/Pages/aboutus(french).html">À propos</a></li>
       </ul>
     </nav>
   </header>
 
   <main>
-    <h2>At RDL Touch , At RDL's, where allure meets artistry.</h2>
-    <p class="center-text">Your one-stop destination for all your braiding needs.</p>
+    <h2>Chez RDLTouch, là où l’allure rencontre l’art.</h2>
+    <p class="center-text">Votre destination unique pour tous vos besoins en tressage et cils.</p>
 
     <section class="services">
-      <h3>Our Services</h3>
+      <h3>Nos Services</h3>
       <ul class="service-list">
-        <li>Box Braids</li>
+        <li>Tresses Box</li>
         <li>Twists</li>
-        <li>Feeding Cornrows</li>
-        <li>Weaves</li>
-        <li>Boho Styles</li>
+        <li>Nattes collées (Feeding Cornrows)</li>
+        <li>Tissages</li>
+        <li>Styles Boho</li>
       </ul>
     </section>
 
     <section class="gallery">
-      <h3>Gallery</h3>
-      <p class="center-text">Check out our latest styles and trends.</p>
+      <h3>Galerie</h3>
+      <p class="center-text">Découvrez nos derniers styles et tendances.</p>
 
       <div class="video-gallery">
-        <!-- TikTok Video 1 -->
+        <!-- TikTok Vidéo 1 -->
         <blockquote class="tiktok-embed"
           cite="https://www.tiktok.com/@rdl.touch/video/7574600396832787719"
           data-video-id="7574600396832787719"
@@ -65,7 +63,7 @@
           <section></section>
         </blockquote>
 
-        <!-- TikTok Video 2 -->
+        <!-- TikTok Vidéo 2 -->
         <blockquote class="tiktok-embed"
           cite="https://www.tiktok.com/@rdl.touch/video/7544687108745710855"
           data-video-id="7544687108745710855"
@@ -73,7 +71,7 @@
           <section></section>
         </blockquote>
 
-        <!-- TikTok Photo Post -->
+        <!-- TikTok Publication Photo -->
         <blockquote class="tiktok-embed"
           cite="https://www.tiktok.com/@rdl.touch/photo/7578909508555132168"
           data-video-id="7578909508555132168"
@@ -83,25 +81,25 @@
       </div>
     </section>
 
-    <!-- TikTok Embed Script (only once) -->
+    <!-- Script d’intégration TikTok -->
     <script async src="https://www.tiktok.com/embed.js"></script>
 
     <section class="book-now">
-      <h3>Book Now</h3>
-      <p>Book your appointment today!</p>
-      <a href="/Pages/book.html">Book Now</a>
+      <h3>Réserver</h3>
+      <p>Réservez votre rendez-vous dès aujourd’hui !</p>
+      <a href="/Pages/book-fr.html">Réserver</a>
     </section>
   </main>
 
   <footer>
-    <p>&copy; 2025 RDL Touch. All rights reserved.</p>
-    <p><a href="privacy.html">Privacy Policy</a></p>
-    <p><a href="terms.html">Terms of Service</a></p>
-    <p>Follow us on social media:</p>
+    <p>&copy; 2025 RDL Touch. Tous droits réservés.</p>
+    <p><a href="privacy.html">Politique de confidentialité</a></p>
+    <p><a href="terms.html">Conditions d’utilisation</a></p>
+    <p>Suivez-nous sur les réseaux sociaux :</p>
     <ul>
       <li><a href="https://www.tiktok.com/@rdl.touch">TikTok</a></li>
     </ul>
-    <button id="toggle-theme">Toggle Theme</button>
+    <button id="toggle-theme">Changer de thème</button>
   </footer>
 
   <script src="Scripts/Doc.js"></script>
