--- a/Pages/gallery-fr.html
+++ b/Pages/gallery-fr.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta
       name="description"
-      content="At RDL Touch, where allure meets artistry"
+      content="Chez RDL Touch, l’allure rencontre l’art"
     />
-    <meta name="keywords" content="RDL, braids, hair, beauty, style" />
+    <meta name="keywords" content="RDL, tresses, coiffure, beauté, style" />
     <meta name="author" content="RDL Touch" />
     <link rel="stylesheet" href="../Styles/Styles.css" />
     <link rel="stylesheet" href="../Styles/gallerystyle.css" />
@@ -16,46 +16,51 @@
       href="https://fonts.googleapis.com/css2?family=Edu+NSW+ACT+Cursive:wght@400..700&display=swap"
       rel="stylesheet"
     />
-    <title>RDL Touch - Gallery</title>
+    <title>RDL BRAIDS.Touch - Galerie</title>
   </head>
-  <div class="language-switcher">
-    <a href="Doc.html">English</a> | <a href="Doc-fr.html">Français</a>
-  </div>
 
   <body>
     <div class="page-container">
-      <!-- Header and Navigation -->
+      <!-- En-tête et navigation -->
       <header>
         <div class="logo">
           <img
             src="../Images/RDL Touch.jpeg"
-            alt="RDL BRAIDS Logo"
+            alt="Logo RDL BRAIDS"
             width="150"
             height="150"
           />
         </div>
-        <nav id="navbar" role="navigation" aria-label="Main Navigation">
+
+        <!-- Language Switcher -->
+        <div class="language-switcher">
+          <a href="gallery.html">English</a> |
+          <a href="gallery-fr.html">Français</a>
+        </div>
+
+        <nav id="navbar" role="navigation" aria-label="Navigation principale">
           <ul>
-            <li><a href="../Doc.html">Home</a></li>
-            <li><a href="services.html">Services</a></li>
-            <li><a href="book.html">Book Now</a></li>
-            <li><a href="prices.html">Prices</a></li>
-            <li><a href="gallery.html">Gallery</a></li>
-            <li><a href="Contactus.html">Contact Us</a></li>
-            <li><a href="aboutus.html">About Us</a></li>
+            <li><a href="../Doc-fr.html">Accueil</a></li>
+            <li><a href="services-fr.html">Services</a></li>
+            <li><a href="book-fr.html">Réserver</a></li>
+            <li><a href="prices-fr.html">Tarifs</a></li>
+            <li><a href="gallery-fr.html">Galerie</a></li>
+            <li><a href="contactus-fr.html">Contact</a></li>
+            <li><a href="aboutus(french).html">À propos</a></li>
+            <!-- Toggle back to English -->
           </ul>
         </nav>
       </header>
 
-      <!-- Main Content -->
+      <!-- Contenu principal -->
       <main class="content">
-        <h1>Gallery</h1>
+        <h1>Galerie</h1>
         <p>
-          Welcome to our gallery! Here you can see some of the beautiful braids
-          and styles we have created for our clients.
+          Bienvenue dans notre galerie ! Découvrez quelques-unes des magnifiques
+          tresses et coiffures que nous avons réalisées pour nos clientes.
         </p>
 
-        <!-- TikTok Video Gallery -->
+        <!-- Galerie de vidéos TikTok -->
         <div class="video-gallery">
           <blockquote
             class="tiktok-embed"
@@ -129,43 +134,43 @@
           </blockquote>
         </div>
 
-        <!-- Info Links -->
+        <!-- Liens d'information -->
         <section class="info-links">
           <p>
-            For more information about our services, please visit our
-            <a href="services.html">Services</a> page.
+            Pour plus d’informations sur nos services, veuillez visiter notre
+            page <a href="services-fr.html">Services</a>.
           </p>
           <p>
-            If you would like to book an appointment, please go to our
-            <a href="book.html">Booking</a> page.
+            Si vous souhaitez réserver un rendez-vous, rendez-vous sur notre
+            page <a href="book-fr.html">Réservation</a>.
           </p>
           <p>
-            For pricing details, please check our
-            <a href="prices.html">Prices</a> page.
+            Pour les détails des tarifs, consultez notre page
+            <a href="prices-fr.html">Tarifs</a>.
           </p>
           <p>
-            If you have any questions or need assistance, feel free to
-            <a href="Contactus.html">Contact Us</a>.
+            Si vous avez des questions ou besoin d’aide, n’hésitez pas à nous
+            <a href="contactus-fr.html">contacter</a>.
           </p>
         </section>
       </main>
 
-      <!-- Footer -->
+      <!-- Pied de page -->
       <footer>
-        <p>&copy; 2025 RDL Touch. All rights reserved.</p>
+        <p>&copy; 2025 RDL Touch. Tous droits réservés.</p>
         <p>
-          <a href="privacy.html">Privacy Policy</a> |
-          <a href="terms.html">Terms of Service</a>
+          <a href="privacy.html">Politique de confidentialité</a> |
+          <a href="terms.html">Conditions d’utilisation</a>
         </p>
-        <p>Follow us on social media:</p>
+        <p>Suivez-nous sur les réseaux sociaux :</p>
         <ul>
           <li><a href="https://www.tiktok.com/@rdl.touch">TikTok</a></li>
         </ul>
       </footer>
-      <button id="toggle-theme">Toggle Theme</button>
+      <button id="toggle-theme">Changer de thème</button>
     </div>
 
-    <!-- TikTok Embed Script -->
+    <!-- Script d’intégration TikTok -->
     <script async src="https://www.tiktok.com/embed.js"></script>
   </body>
 </html>
