--- a/Pages/prices.html
+++ b/Pages/prices.html
@@ -6,23 +6,29 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta
       name="description"
-      content="At RDL's, where your braids express who you are"
+      content="At RDL Touch, where allure meets artistry."
     />
     <meta name="Prices" content="RDL, braids, hair, beauty, style" />
     <meta name="keywords" content="RDL, braids, hair, beauty, style" />
-    <meta name="author" content="RDL BRAIDS" />
+    <meta name="author" content="RDL Touch" />
     <link rel="stylesheet" href="../Styles/Styles.css" />
     <link rel="stylesheet" href="../Styles/prices.css" />
-    <title>RDL BRAIDS - Prices</title>
-    <link href="https://fonts.googleapis.com/css2?family=Edu+NSW+ACT+Cursive:wght@400..700&display=swap" rel="stylesheet">
+    <title>RDL Touch - Prices</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Edu+NSW+ACT+Cursive:wght@400..700&display=swap"
+      rel="stylesheet"
+    />
     <div class="logo">
       <img
-        src="../Images/RDL.jpg"
+        src="../Images/RDL Touch.jpeg"
         alt="RDL BRAIDS"
         width="150"
         height="150"
         stretch
       />
+    </div>
+    <div class="language-switcher">
+      <a href="Doc.html">English</a> | <a href="Doc-fr.html">Français</a>
     </div>
   </head>
   <nav id="navbar" role="navigation" aria-label="Main Navigation">
@@ -39,7 +45,7 @@
   <body>
     <h1>Our Prices</h1>
     <p>
-      At RDL BRAIDS, we offer competitive pricing for all our braiding services.
+      At RDL Touch, we offer competitive pricing for all our braiding services.
       Below is a list of our services and their prices:
     </p>
     <table>
@@ -78,21 +84,21 @@
     </table>
     <p>For special requests or custom styles, please contact us for a quote.</p>
     <footer>
-      <p>&copy; 2025 RDL BRAIDS. All rights reserved.</p>
+      <p>&copy; 2025 RDL Touch. All rights reserved.</p>
       <p><a href="privacy.html">Privacy Policy</a></p>
       <p><a href="terms.html">Terms of Service</a></p>
       <p>Follow us on social media:</p>
       <ul>
-        <li><a href="https://www.tiktok.com/@rdl.braids">TikTok</a></li>
+        <li><a href="https://www.tiktok.com/@rdl.touch">TikTok</a></li>
       </ul>
     </footer>
     <button id="toggle-theme">Toggle Theme</button>
   </body>
 </html>
 <!-- End of file: Pages/prices.html -->
-<!-- This file contains the prices of the services offered by RDL BRAIDS. -->
+<!-- This file contains the prices of the services offered by RDL Touch. -->
 <!-- It includes a list of services and their corresponding prices. -->
 <!-- The prices are competitive and reflect the quality of the services provided. -->
-<!-- For any special requests or custom styles, customers are encouraged to contact RDL BRAIDS for a quote. -->
+<!-- For any special requests or custom styles, customers are encouraged to contact RDL Touch for a quote. -->
 <!-- The page is styled using an external CSS file and includes a navigation bar for easy access to
 other pages on the website. -->
