--- a/Pages/services.html
+++ b/Pages/services.html
@@ -16,10 +16,15 @@
     <title>RDL BRAIDS - Services</title>
     <link href="https://fonts.googleapis.com/css2?family=Edu+NSW+ACT+Cursive:wght@400..700&display=swap" rel="stylesheet">
   </head>
+  <div class="language-switcher">
+    <a href="Doc.html">English</a> | <a href="Doc-fr.html">Français</a>
+  </div>
+</header>
+
   <body>
     <div class="logo">
       <img
-        src="../Images/RDL.jpg"
+        src="../Images/RDL Touch.jpeg"
         alt="RDL BRAIDS"
         width="150"
         height="150"
@@ -35,6 +40,7 @@
         <li><a href="gallery.html">Gallery</a></li>
         <li><a href="Contactus.html">Contact Us</a></li>
         <li><a href="aboutus.html">About Us</a></li>
+        <li><a href="services-fr.html">Français</a></li>
       </ul>
     </nav>
 
@@ -89,7 +95,7 @@
       <p><a href="terms.html">Terms of Service</a></p>
       <p>Follow us on social media:</p>
       <ul>
-        <li><a href="https://www.tiktok.com/@rdl.braids">TikTok</a></li>
+        <li><a href="https://www.tiktok.com/@rdl.touch">TikTok</a></li>
       </ul>
     </footer>
     <button id="toggle-theme">Toggle Theme</button>
