--- a/Pages/Aboutus.html
+++ b/Pages/Aboutus.html
@@ -1,65 +1,89 @@
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta
-      name="about us"
-      content="At RDL's, where your braids express who you are"
+      name="description"
+      content="At RDL Touch, where allure meets artistry"
     />
-    <meta name="gallery" content="RDL, braids, hair, beauty, style" />
     <meta name="keywords" content="RDL, braids, hair, beauty, style" />
-    <meta name="author" content="RDL BRAIDS" />
+    <meta name="author" content="RDL Touch" />
     <link rel="stylesheet" href="../Styles/Styles.css" />
-    <title>RDL BRAIDS - Gallery</title>
-    <link href="https://fonts.googleapis.com/css2?family=Edu+NSW+ACT+Cursive:wght@400..700&display=swap" rel="stylesheet">
-    <div class="logo">
-      <img
-        src="../Images/RDL.jpg"
-        alt="RDL BRAIDS"
-        width="150"
-        height="150"
-        stretch
-      />
-    </div>
+    <title>RDL Touch - About Us</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Edu+NSW+ACT+Cursive:wght@400..700&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <nav id="navbar" role="navigation" aria-label="Main Navigation">
-    <ul>
-      <li><a href="../Doc.html">Home</a></li>
-      <li><a href="services.html">Services</a></li>
-      <li><a href="book.html">Book Now</a></li>
-      <li><a href="prices.html">Prices</a></li>
-      <li><a href="gallery.html">Gallery</a></li>
-      <li><a href="contactus.html">Contact Us</a></li>
-      <li><a href="aboutus.html">About Us</a></li>
-    </ul>
-  </nav>
+  <div class="language-switcher">
+    <a href="Aboutus.html">English</a> |
+    <a href="Aboutus(french).html">Français</a>
+  </div>
+
   <body>
-    <h1>About Us</h1>
-    <p>
-      Welcome to RDL BRAIDS! My name is Rose De Lima and I am a hair braiding
-      professional who is passionate about helping you express your unique style
-      through beautiful braids.
-    </p>
-    <p>
-      My mission is to provide high-quality braiding services that not only
-      enhance your beauty but also boost your confidence. I believe that every
-      braid tells a story, and I am here to help you tell yours.
-    </p>
-    <p>
-      Thank you for choosing RDL BRAIDS. I look forward to serving you and
-      making your braiding experience unforgettable!
-    </p>
+    <header>
+      <div class="logo">
+        <img
+          src="../Images/RDL Touch.jpeg"
+          alt="RDL BRAIDS logo"
+          width="150"
+          height="150"
+        />
+      </div>
+      <nav id="navbar" role="navigation" aria-label="Main Navigation">
+        <ul>
+          <li><a href="../Doc.html">Home</a></li>
+          <li><a href="services.html">Services</a></li>
+          <li><a href="book.html">Book Now</a></li>
+          <li><a href="prices.html">Prices</a></li>
+          <li><a href="gallery.html">Gallery</a></li>
+          <li><a href="contactus.html">Contact Us</a></li>
+          <li><a href="aboutus.html">About Us</a></li>
+        </ul>
+      </nav>
+    </header>
+
+    <main>
+      <h1>About Us</h1>
+      <p>
+        Welcome to RDL Touch! My name is Rose De Lima and I am a hair braiding
+        professional who is passionate about helping you express your unique
+        style through beautiful braids and cils.
+      </p>
+      <p>
+        My mission is to provide high-quality braiding services that not only
+        enhance your beauty but also boost your confidence. I believe that every
+        braid tells a story, and I am here to help you tell yours.
+      </p>
+      <p>
+        Thank you for choosing RDL Touch. I look forward to serving you and
+        making your braiding experience unforgettable!
+      </p>
+
+      <blockquote
+        class="tiktok-embed"
+        cite="https://www.tiktok.com/@rdl.touch/video/7559206503668927752"
+        data-video-id="7559206503668927752"
+        style="max-width: 605px; min-width: 325px"
+      >
+        <section></section>
+      </blockquote>
+      <script async src="https://www.tiktok.com/embed.js"></script>
+    </main>
+
     <footer>
-      <p>&copy; 2025 RDL BRAIDS. All rights reserved.</p>
+      <p>&copy; 2025 RDL Touch. All rights reserved.</p>
       <p><a href="privacy.html">Privacy Policy</a></p>
       <p><a href="terms.html">Terms of Service</a></p>
       <p>Follow us on social media:</p>
       <ul>
-        <li><a href="https://www.tiktok.com/@rdl.braids">TikTok</a></li>
+        <li><a href="https://www.tiktok.com/@rdl.touch">TikTok</a></li>
       </ul>
     </footer>
+
     <button id="toggle-theme">Toggle Theme</button>
+    <script src="../Scripts/Toggle.js"></script>
   </body>
-   <script src="../Scripts/Toggle.js"></script>
 </html>
