few changes made to the following files: services.html services-fr.html Aboutus.html Aboutus(french).html Contactus.html

--- a/Doc.HTML
+++ b/Doc.HTML
@@ -38,7 +38,7 @@
   </header>
 
   <main>
-    <h2>At RDL Touch , At RDL's, where allure meets artistry.</h2>
+    <h2>At RDL Touch , At RDL Touch, where allure meets artistry.</h2>
     <p class="center-text">Your one-stop destination for all your braiding needs.</p>
 
     <section class="services">
