--- a/Pages/services-fr.html
+++ b/Pages/services-fr.html
@@ -53,7 +53,7 @@
     <main>
       <h1>Nos Services</h1>
       <p>
-        Chez RDL BRAIDS, nous proposons une variété de services de tressage pour
+        Chez RDL Touch, nous proposons une variété de services de tressage pour
         répondre à vos besoins.
       </p>
 
