--- a/Pages/services.html
+++ b/Pages/services.html
@@ -46,7 +46,7 @@
 
     <h1>Our Services</h1>
     <p>
-      At RDL BRAIDS, we offer a variety of braiding services to meet your needs.
+      At RDL Touch , we offer a variety of braiding services to meet your needs.
     </p>
     <div class="services">
       <h2>Why Choose Us?</h2>
