I am writing to commit the following changes to the repository: website name changed from "RDL BRAIDS" to "RDL Touch" in French pages and updated footer color in ServiceStyle.css.

--- a/Pages/book.html
+++ b/Pages/book.html
@@ -97,7 +97,7 @@
       <p><a href="terms.html">Terms of Service</a></p>
       <p>Follow us on social media:</p>
       <ul>
-        <li><a href="https://www.tiktok.com/@rdl.braids">TikTok</a></li>
+        <li><a href="https://www.tiktok.com/@rdl.touch">TikTok</a></li>
       </ul>
       <button id="toggle-theme">Toggle Theme</button>
     </footer>
