--- a/Pages/prices.html
+++ b/Pages/prices.html
@@ -21,7 +21,7 @@
     <div class="logo">
       <img
         src="../Images/RDL Touch.jpeg"
-        alt="RDL BRAIDS"
+        alt="RDL Touch"
         width="150"
         height="150"
         stretch
