I have modified several Hteml pages to enhance the user experience and update the content. The changes include layout adjustments, updated text, and improved navigation links.

--- a/Pages/Contactus.html
+++ b/Pages/Contactus.html
@@ -30,7 +30,7 @@
     </script>
   </head>
   <div class="language-switcher">
-    <a href="Doc.html">English</a> | <a href="Doc-fr.html">Français</a>
+    <a href="Contactus.html">English</a> | <a href="Contactus-fr.html">Français</a>
   </div>
 
   <body>
