--- a/Pages/gallery.html
+++ b/Pages/gallery.html
@@ -19,7 +19,7 @@
     <title>RDL Touch - Gallery</title>
   </head>
   <div class="language-switcher">
-    <a href="Doc.html">English</a> | <a href="Doc-fr.html">Français</a>
+    <a href="gallery.html">English</a> | <a href="gallery-fr.html">Français</a>
   </div>
 
   <body>
