--- a/Pages/prices.html
+++ b/Pages/prices.html
@@ -28,7 +28,7 @@
       />
     </div>
     <div class="language-switcher">
-      <a href="Doc.html">English</a> | <a href="Doc-fr.html">Français</a>
+      <a href="prices.html">English</a> | <a href="prices-fr.html">Français</a>
     </div>
   </head>
   <nav id="navbar" role="navigation" aria-label="Main Navigation">
