--- a/Pages/services.html
+++ b/Pages/services.html
@@ -17,7 +17,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Edu+NSW+ACT+Cursive:wght@400..700&display=swap" rel="stylesheet">
   </head>
   <div class="language-switcher">
-    <a href="Doc.html">English</a> | <a href="Doc-fr.html">Français</a>
+    <a href="services.html">English</a> | <a href="services-fr.html">Français</a>
   </div>
 </header>
 
