--- a/Pages/book.html
+++ b/Pages/book.html
@@ -35,7 +35,7 @@
     </style>
   </head>
   <div class="language-switcher">
-    <a href="Doc.html">English</a> | <a href="Doc-fr.html">Français</a>
+    <a href="book.html">English</a> | <a href="book-fr.html">Français</a>
   </div>
 
   <body>
